# merlin

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  env_linux.yml  env_macOS.yml  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake  merlin  mkdocs.yml  pyproject.toml  requirements.txt
.codex/: AGENTS.md
compiler/src/merlin/Dialect/Gemmini/: .gitignore  CMakeLists.txt  README.md  RegisterGemmini.cpp  RegisterGemmini.h
projects/xpu-rt/: CMakeLists.txt  CMakeLists_standalone.cmake  xpurt_scheduler_backend_iree.c  xpurt_scheduler_core.c  xpurt_scheduler_core.h
samples/: CMakeLists.txt  README.md
samples/SaturnOPU/: CMakeLists.txt
samples/SaturnOPU/custom_dispatch_ukernels/: CMakeLists.txt  README.md  deep_quantize_test.py  dummy_input.py  export_models_onnx.py  export_models_torch.py  full_quantize_test.py  main.c  onnx_static_test input  onnx_static_test.py  onnx_static_test_names.py  plots.py  quantize_test.py  saturn_features_test.c  static_quantize_runner.py
samples/SaturnOPU/custom_dispatch_ukernels/custom_models/: FC.py  ViTsubmodules.py  vitfly_models.py  vitfly_models_july.py
samples/SaturnOPU/custom_dispatch_ukernels/dispatch_opu_m2_gemm/: CMakeLists.txt  bme.h  iree_example.mlir  qgemm_ukernel_call.c  transform_spec.mlir  transform_spec_complex.mlir  ukernel.c
samples/SaturnOPU/simple_embedding_ukernel/: CMakeLists.txt  device_embedded_sync.c  model_benchmark.c  opu_microbench.c  simple_embedding.c  tinyllama_rvv_vmfb_embed.S.in  tinyllama_rvv_vmfb_loader.c  tinyllama_vmfb_embed.S.in  tinyllama_vmfb_loader.c  tinyllama_vmfb_loader.h
samples/SaturnOPU/simple_embedding_ukernel/tests/: mlp_3layer_1024.mlir  mm_1024.mlir  mm_1024_const_rhs.mlir  mm_1024_transpose.mlir  mm_128.mlir  mm_128_transpose.mlir  mm_2048.mlir  mm_2048_transpose.mlir  mm_256.mlir  mm_256_transpose.mlir  mm_512.mlir  mm_512_transpose.mlir  mm_64.mlir  mm_64_transpose.mlir  mm_64x64x1024.mlir  mm_64x64x128.mlir  mm_64x64x2048.mlir  mm_64x64x256.mlir  mm_64x64x4096.mlir  mm_64x64x512.mlir
samples/SaturnOPU/simple_embedding_ukernel/tests/microtests/: cvt_64_i32_f32_i32.mlir  divf_vv_64xf32.mlir  erf_64xf32.mlir  matmul_64x128x128.mlir  matmul_bmm_4x64x64.mlir  matmul_i8_64x128x128.mlir  matmul_i8_accumulate.mlir  matmul_i8_narrow_m_1x128x128.mlir  matmul_i8_residual_bias_requant.mlir  matmul_i8_wide_128x256x256.mlir  rsqrt_64xf32.mlir  softmax_64x64xf32.mlir  sqrt_64xf32.mlir  vit_d7_softmax_chunk.mlir  vit_d9_chunk.mlir  vit_layernorm_d1_chunk.mlir
samples/SpacemiTX60/: CMakeLists.txt
samples/SpacemiTX60/b_baseline_dual_model_async/: CMakeLists.txt  main.c  runtime_dispatch_graph.cc  runtime_dispatch_graph.h
samples/SpacemiTX60/b_baseline_dual_model_async/analysis/: run_tracy_on_board.sh
samples/SpacemiTX60/b_dispatch_level_model_async/: CMakeLists.txt  dispatch_graph_parse.h  dispatch_output.h  dispatch_types.h  main.c  runtime_scheduler.cc  runtime_scheduler.h  vmfb_resolve.h
samples/SpacemiTX60/b_dispatch_level_model_async/analysis/: reference_trace.csv  scheduled_networks_periodic_profile_profiled.json
samples/SpacemiTX60/baseline_async/: CMakeLists.txt  main.c  runtime_dispatch_graph.cc  runtime_dispatch_graph.h
samples/SpacemiTX60/baseline_dual_model_async/: CMakeLists.txt  main.c  runtime_scheduler.cc  runtime_scheduler.h  sensor_generator.cc  sensor_generator.h
samples/SpacemiTX60/dispatch_level_model_async/: CMakeLists.txt  dronet.q.int8_dispatch_graph.json  main.c
samples/SpacemiTX60/dispatch_scheduler/: CMakeLists.txt  main.c  runtime_scheduler.cc  runtime_scheduler.h
samples/SpacemiTX60/dispatch_scheduler/analysis/: plot_dispatch_trace.py  run_on_board.sh
samples/SpacemiTX60/simple_2_model_async/: CMakeLists.txt  main.c  runtime_scheduler.cc  runtime_scheduler.h
samples/SpacemiTX60/simple_2_model_sync/: CMakeLists.txt  main.c  runtime_scheduler.cc  runtime_scheduler.h
samples/SpacemiTX60/simple_dual_model_async/: CMakeLists.txt  main.c
samples/SpacemiTX60/v2_2_model_async/: CMakeLists.txt  main.c  runtime_scheduler.cc  runtime_scheduler.h
samples/baseline_dual_model_async/: main.c  runtime_scheduler.cc  runtime_scheduler.h
samples/common/core/: CMakeLists.txt  cli_utils.h  json_parser.h  path_utils.h  stats.h
samples/common/dispatch/: CMakeLists.txt  dispatch_graph.h  dispatch_output.h  dispatch_types.h  vmfb_resolve.h
samples/common/iree_bench/: CMakeLists.txt  cli_utils.h  fatal_state.h  iree_module_utils.h  json_parser.h  path_utils.h  stats.h
samples/common/mlir_pipelining/: compile_mlir.sh  run_mlir.sh
samples/common/mlir_pipelining/async_mlir/: our_pipeline_async.mlir  our_pipeline_full_async.mlir  our_pipeline_sync.mlir  run_looped.mlir
samples/common/model_computation_graph_generation/: dot_dispatch_parser.py  mlir_flow_parser.py
samples/common/promise_devices_layer/: compile_stream.sh  input.mlir  main.c  stream.mlir  stream2.mlir  test.mlir
samples/common/promise_schedule_multi_model/: combined_schedule.dot  combined_schedule.json  dronet.mlir  dronet_pinned.mlir  hw_annotation.py  mlp.mlir  mlp_pinned.mlir  mobilenet_v2.mlir  mobilenet_v2_pinned.mlir
samples/common/runtime/: CMakeLists.txt  fatal_state.h  iree_module_utils.h  module_cache.h  pinned_device.h
samples/common/xpu-rt/: CMakeLists.txt  CMakeLists_standalone.cmake  README.md  baseline_runner.cc  baseline_runner.h  scheduler_runner.cc  scheduler_runner.h
samples/custom_dispatch_ukernels_saturn/: quantize_test.py
samples/research/mlir_pipelining/: run_mlir.sh
samples/research/mlir_pipelining/async_mlir/: our_pipeline_async.mlir  our_pipeline_full_async.mlir  our_pipeline_full_async_looped.mlir  our_pipeline_sync.mlir
samples/research/model_computation_graph_generation/: dot_dispatch_parser.py  mlir_flow_parser.py
samples/research/promise_devices_layer/: compile.sh  input.mlir  main.c  stream.mlir  stream2.mlir  test.mlir
samples/research/promise_schedule_multi_model/: mlp.mlir
(+692 files in other folders)
