# pyproject.toml
[project]
name = "merlin-dev"
version = "0.1.0"
description = "Merlin NPU and ML Compiler Environment"
readme = "README.md"
requires-python = "==3.11.*"


dependencies = [
    "torch",
    "torchvision",
    "iree-base-compiler",
    "iree-base-runtime",
    "iree-turbine",
    "accelerate==1.11.0",
    "transformers==4.52.1",
    "diffusers==0.35.2",
    "executorch==1.0.0",
    "coremltools==9.0b1",
    "torchao==0.14.0",
    "triton==3.5.0; sys_platform == 'linux'",


    "onnx==1.19.0",
    "onnxruntime==1.22.1",
    "onnxconverter-common==1.16.0",
    "onnxscript==0.5.1",
    "onnx-ir==0.1.9",


    "openai==1.55.3",
    "datasets==3.0.0",
    "gguf==0.17.1",
    "mistral_common==1.8.5",
    "tiktoken==0.12.0",
    "huggingface-hub==0.36.0rc0",


    "numpy==2.2.6",
    "pandas==2.2.3",
    "scipy==1.16.2",
    "scikit-learn==1.7.1",
    "scikit-image==0.25.2",
    "pyarrow==21.0.0",
    "networkx==3.3",
    "sympy==1.14.0",
    "z3-solver==4.15.3.0",


    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "pillow==11.0.0",
    "opencv-python==4.12.0.88",
    "imageio==2.37.0",
    "pydotplus==2.0.2",

    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "fire==0.7.1",
    "typer==0.15.4",
    "inquirerpy==0.3.4",
    "click==8.1.8",

    "fastapi==0.119.1",
    "uvicorn==0.38.0",
    "requests==2.32.5",
    "aiohttp==3.11.3",

    "pre-commit==4.3.0",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.8",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.5.0",
    "pytest-timeout==2.4.0",
    "pytest-rerunfailures==15.1",
    "pytest-html==4.1.1",
    "pytest-json-report==1.5.0",
    "hypothesis==6.142.1",
    "expecttest==0.3.0",
    "rich==14.2.0",
    "tqdm==4.67.1",

    "wave-lang==3.8.0; sys_platform == 'linux'",
    "wget==3.2",
    "filelock==3.13.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# Tell Ruff to completely ignore these directories
exclude = [
    "third_party",
    "build",
    ".git",
    ".venv",
    ".codex",
    "mlirEvolve",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["F821", "E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs*", "benchmarks*", "build*", "third_party*", "models*", "samples*", "mlirAgent*", "mlirEvolve*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
find-links = ["https://iree.dev/pip-release-links.html"]


required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
torchvision = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
